--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="shortcut icon" href="../src/Assest/WB.jpg" type="image/x-icon">
+    <link rel="icon" href="../src/Assest/WB.jpg" >
     
     <title> Project Unlocked </title>
   </head>
